# aif-core

./: CONTRIBUTING.md  Cargo.toml  DCO  NOTICE  README.md  deny.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
LICENSE/: LICENSE  LICENSE-APACHE  LICENSE-MIT
src/: lib.rs
tests/: infer_diff.rs
