[package]
name = "aif-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "AIF core: fast schema inference and diff in Rust with PyO3 bindings"
authors = ["AIF Team"]

[lib]
name = "aif_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["abi3-py38"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
indexmap = "2"

[profile.release]
lto = true
codegen-units = 1

[features]
extension-module = ["pyo3/extension-module"]
