[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "aif-core"
version = "0.1.0"
description = "AIF core: Rust schema inference & diff with PyO3"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["extension-module"]
